fixed grid alignment, maybe the first of many

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -31,7 +31,7 @@ body {
 }
 
 [class*='col-3'] {
-  margin-top: 7px;
+  margin-top: 11px;
 }
 
 .cf:before,
